localized/src/components/Bubble.css
@media sreen and(max-width: 400px){
.animate__fadeOutUp{
  width: 100%;
}
}


.blueButton{
  width: 200px;
  height:200px;
  border-radius: 50%;
  color: white;
  font-size: 25px;
  line-height: 250px;
  text-align: center;
  background: -webkit-linear-gradient(to right, #9c9c9cbe, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to top, #9c9c9cbe, #2d8fd1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.grayButton{
  width: 200px;
  height:200px;
  border-radius: 50%;
  color: white;
  font-size: 25px;
  line-height: 250px;
  text-align: center;
  background: -webkit-linear-gradient(to right, #9c9c9cbe, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
  background: gray;
}

p{
  font-size: 150%;
  text-align: center;
  margin-bottom: 0;
}

.App-link{
  float: right;
  border-color: black;
  color: dodgerblue;
  font-size: 30px;
  margin-right: 20px;
}

.BubbleList ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  float: center;
  flex-flow: row wrap-reverse;
  align-items: flex-end;
  width: max-content;
}

li{
  margin: 0.1em;
  padding: 0.1em;
 
}

.App-link:hover {
  background: #2196F3;
  color: white;
}



#menu li {
  width: 250px;
  height: auto;
}

.animate__fadeOutUp{
  /* animation-delay: 3s; */
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation: bounce 0.9s;
}
@keyframes bounce{
  10%{
    transform: translateY(240px);
  }
}

#Voting{
  position: absolute;
  top: 44%;
  left: 31%;
}

#Petitions{
  position: absolute;
  top:16%;
  left: 27%;
}

#Traffic{
  position: absolute;
  left: 57%;
}

#Zoning{
  position: absolute;
  top:34%;
  left: 42%;
}

#Budget{
  position: absolute;
  top:44%;
  left: 59%;
}

#Schools{
  position: absolute;
  top: 62%;
  left: 37%;
}

#Tax{
  position: absolute;
  top: 57%;
  left: 49%;
}

#Protest{
  position: absolute;
  top: 64%;
  left: 61%;
}

